--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   google_fonts: ^3.0.1
   flutter_hooks: ^0.18.5+1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
